--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -3,6 +3,7 @@ on:
   pull_request:
     types:
       - opened
+      - closed
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -19,4 +20,3 @@ jobs:
         run: npm run build
       - name: Deploy project
         run: echo "Deploying..."
-        
